cmake_minimum_required(VERSION 3.17)
project(c-json)
set(CMAKE_C_STANDARD 99)
set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
include_directories(include)
aux_source_directory(src DIR_SRC)
add_subdirectory(tests)
add_library(cJson ${DIR_SRC})
set_property(TARGET cJson PROPERTY OUTPUT_NAME JsonTool)
file(GLOB_RECURSE includes include/*.h)
install(FILES ${includes} DESTINATION dist)
install(TARGETS cJson ARCHIVE DESTINATION dist)